# Vulcan

./: .gitignore  CHANGELOG.md  CHANGELOG_v0.4.0.md  CHANGELOG_v0.5.0.md  CHANGELOG_v0.6.0.md  DEVELOPMENT.md  README.md  gui_mockup.md  pyproject.toml  requirements.txt  test_v0.6.0_integration.py
data/: example_drillholes.csv
scripts/: complete_workflow.json  example_workflow.json  fine_block_model.json  kriging_workflow.py  ml_workflow.py  section_workflow.json  simple_drillholes.json
src/proyectovulcano/: __init__.py  app.py  automation.py  block_model.py  compositing.py  config.py  geology_estimation.py  gui.py  gui_mockup.py  gui_pyqt5.py  io.py  kriging.py  machine_learning.py  module_catalog.py  sections.py  stats.py  viewer.py
tests/: __init__.py  test_block_model.py  test_compositing.py  test_io.py  test_kriging.py  test_machine_learning.py  test_stats.py
